<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0                       http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>edu.pdx.cs410J</groupId>
  <version>Summer2018</version>
  <artifactId>CS410J</artifactId>
  <packaging>pom</packaging>
  <name>CS410J Java Example Code</name>
  <description>Example Java Code for CS410J: Advanced Java Programming at Portland State University</description>
  <url>http://www.cs.pdx.edu/~whitlock</url>
  <modules>
    <module>examples</module>
    <module>web</module>
    <module>family</module>
    <module>grader</module>
    <module>gwt-parent</module>
    <module>projects-parent</module>
  </modules>
  <inceptionYear>2000</inceptionYear>
  <organization>
    <name>Portland State University</name>
    <url>http://www.pdx.edu</url>
  </organization>
  <issueManagement>
    <system>github</system>
    <url>https://github.com/DavidWhitlock/PortlandStateJava/issues</url>
  </issueManagement>
  <licenses>
    <license>
      <name>Apache License, Version 2.0</name>
      <url>https://www.apache.org/licenses/LICENSE-2.0.txt</url>
      <distribution>repo</distribution>
    </license>
  </licenses>
  <developers>
    <developer>
      <id>whitlock</id>
      <name>David Whitlock</name>
      <email>whitlock@cs.pdx.edu</email>
      <url>http://www.cs.pdx.edu/~whitlock</url>
      <organization>PSU Department of Computer Science</organization>
      <organizationUrl>http://www.cs.pdx.edu</organizationUrl>
      <roles>
        <role>Professor</role>
      </roles>
      <timezone>-7</timezone>
    </developer>
  </developers>
  <scm>
    <connection>scm:git:git@github.com:DavidWhitlock/PortlandStateJava.git</connection>
  </scm>
    <prerequisites>
        <maven>3.5.2</maven>
    </prerequisites>
    <properties>
        <maven.compiler.source>9</maven.compiler.source>
        <maven.compiler.target>9</maven.compiler.target>

        <groovy.version>2.4.10</groovy.version>

        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
        <pmd.version>6.4.0</pmd.version>
    </properties>
    <repositories>
      <repository>
        <id>CS410J</id>
        <name>CS410J Maven Repository</name>
        <url>https://dl.bintray.com/davidwhitlock/maven</url>
      </repository>
    </repositories>
  <build>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-enforcer-plugin</artifactId>
        <version>1.4.1</version>
        <executions>
          <execution>
            <id>enforce-versions</id>
            <goals>
              <goal>enforce</goal>
            </goals>
          </execution>
        </executions>
        <configuration>
          <rules>
            <requireMavenVersion>
              <version>3.5.2</version>
            </requireMavenVersion>
            <requireJavaVersion>
              <version>${maven.compiler.target}</version>
            </requireJavaVersion>
          </rules>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-source-plugin</artifactId>
        <version>2.4</version>
        <executions>
          <execution>
            <goals>
              <goal>jar</goal>
              <goal>test-jar</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-jar-plugin</artifactId>
        <version>2.6</version>
        <executions>
          <execution>
            <goals>
              <goal>jar</goal>
              <goal>test-jar</goal>
            </goals>
          </execution>
        </executions>
        <configuration>
          <archive>
            <manifest>
              <addDefaultImplementationEntries>true</addDefaultImplementationEntries>
            </manifest>
            <manifestEntries>
              <Built-From-Revision>${scmRevision}</Built-From-Revision>
              <Built-From-Branch>${scmBranch}</Built-From-Branch>
              <Built-On>${buildTimestamp}</Built-On>
            </manifestEntries>
          </archive>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-war-plugin</artifactId>
        <version>2.6</version>
        <configuration>
          <archive>
            <manifest>
              <addDefaultImplementationEntries>true</addDefaultImplementationEntries>
            </manifest>
            <manifestEntries>
              <Built-From-Revision>${scmRevision}</Built-From-Revision>
              <Built-From-Branch>${scmBranch}</Built-From-Branch>
              <Built-On>${buildTimestamp}</Built-On>
            </manifestEntries>
          </archive>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-idea-plugin</artifactId>
        <version>2.2.1</version>
        <configuration>
          <downloadJavadocs>true</downloadJavadocs>
          <downloadSources>true</downloadSources>
          <overwrite>true</overwrite>
        </configuration>
      </plugin>
      <plugin>
        <artifactId>maven-deploy-plugin</artifactId>
        <version>2.8.2</version>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-resources-plugin</artifactId>
        <version>2.7</version>
      </plugin>
      <plugin>
        <groupId>org.codehaus.mojo</groupId>
        <artifactId>buildnumber-maven-plugin</artifactId>
        <version>1.4</version>
        <executions>
          <execution>
            <phase>validate</phase>
            <goals>
              <goal>create</goal>
            </goals>
          </execution>
        </executions>
        <configuration>
          <doCheck>false</doCheck> <!-- Don't fail when there are modified files -->
          <doUpdate>false</doUpdate> <!-- Don't update the checkout the code repository -->
          <buildNumberPropertyName>scmRevision</buildNumberPropertyName>
          <scmBranchPropertyName>scmBranch</scmBranchPropertyName>
          <timestampPropertyName>buildTimestamp</timestampPropertyName>
          <timestampFormat>{0, date, yyyy-MM-dd'T'HH:mm:ss.SSSZ}</timestampFormat>
          <revisionOnScmFailure>noScmFound</revisionOnScmFailure>
          <getRevisionOnlyOnce>true</getRevisionOnlyOnce>
        </configuration>
      </plugin>
    </plugins>
    <pluginManagement>
      <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
        <version>2.21.0</version>
        <configuration>
          <!-- Let reflection code run in Java 10 -->
          <argLine>
            --add-modules java.xml.bind
            --add-opens java.base/java.lang=ALL-UNNAMED
            --add-opens java.base/java.util=ALL-UNNAMED
            --illegal-access=deny
          </argLine>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.codehaus.mojo</groupId>
        <artifactId>build-helper-maven-plugin</artifactId>
        <version>1.10</version>
        <executions>
          <execution>
            <id>add-it-source</id>
            <phase>pre-integration-test</phase>
            <goals>
              <goal>add-test-source</goal>
            </goals>
            <configuration>
              <sources>
                <source>src/it/java</source>
              </sources>
            </configuration>
          </execution>
          <execution>
            <id>add-it-resources</id>
            <phase>pre-integration-test</phase>
            <goals>
              <goal>add-test-resource</goal>
            </goals>
            <configuration>
            <resources>
              <resource>
                <directory>src/it/resources</directory>
              </resource>
            </resources>
            </configuration>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.7.0</version>
        <configuration>
          <source>${maven.compiler.source}</source>
          <target>${maven.compiler.target}</target>
          <fork>true</fork>
          <compilerArgs>
            <arg>--add-modules=java.xml.bind</arg>
            <arg>--add-opens=java.base/java.lang=ALL-UNNAMED</arg>
            <arg>--add-opens=java.base/java.util=ALL-UNNAMED</arg>
          </compilerArgs>
        </configuration>
        <executions>
          <execution>
            <id>compile-integration-test</id>
            <phase>pre-integration-test</phase>
            <goals>
              <goal>testCompile</goal>
            </goals>
            <configuration>
              <testIncludes>
                <testInclude>**/*IT.java</testInclude>
                <testInclude>**/*TestSuite.java</testInclude>
              </testIncludes>
              <outputDirectory>${project.build.directory}/it-classes</outputDirectory>
            </configuration>
          </execution>
        </executions>
      </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-failsafe-plugin</artifactId>
          <version>2.21.0</version>
          <configuration>
            <testSourceDirectory>src/it/java</testSourceDirectory>
            <testClassesDirectory>${project.build.directory}/it-classes</testClassesDirectory>
            <additionalClasspathElements>
              <additionalClasspathElement>${project.build.directory}/test-classes</additionalClasspathElement>
            </additionalClasspathElements>
            <excludes>
              <exclude>**/*GwtIT.*</exclude>
            </excludes>
          </configuration>
          <executions>
            <execution>
              <goals>
                <goal>integration-test</goal>
                <goal>verify</goal>
              </goals>
              <configuration>
                <systemPropertyVariables>
                  <http.port>${jetty.http.port}</http.port>
                </systemPropertyVariables>
              </configuration>
            </execution>
          </executions>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-project-info-reports-plugin</artifactId>
          <version>2.9</version>
        </plugin>
        <plugin>
          <groupId>org.jacoco</groupId>
          <artifactId>jacoco-maven-plugin</artifactId>
          <version>0.8.1</version>
          <executions>
            <execution>
              <id>default-prepare-agent</id>
              <goals>
                <goal>prepare-agent</goal>
              </goals>
            </execution>
            <execution>
              <id>default-prepare-agent-integration</id>
              <goals>
                <goal>prepare-agent-integration</goal>
              </goals>
            </execution>
            <execution>
              <id>default-report</id>
              <goals>
                <goal>report</goal>
              </goals>
            </execution>
            <execution>
              <id>default-report-integration</id>
              <goals>
                <goal>report-integration</goal>
              </goals>
            </execution>
            <execution>
              <id>default-check</id>
              <goals>
                <goal>check</goal>
              </goals>
              <configuration>
                <rules>
                </rules>
              </configuration>
            </execution>
          </executions>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-antrun-plugin</artifactId>
          <version>1.8</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-assembly-plugin</artifactId>
          <version>2.6</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-dependency-plugin</artifactId>
          <version>2.10</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-release-plugin</artifactId>
          <version>2.5.3</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-shade-plugin</artifactId>
          <version>2.4.2</version>
        </plugin>
        <plugin>
          <groupId>org.eclipse.jetty</groupId>
          <artifactId>jetty-maven-plugin</artifactId>
          <version>9.4.10.v20180503</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-site-plugin</artifactId>
          <version>3.7.1</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-pmd-plugin</artifactId>
          <version>3.9.0</version>
          <dependencies>
            <dependency>
              <groupId>net.sourceforge.pmd</groupId>
              <artifactId>pmd-core</artifactId>
              <version>${pmd.version}</version>
            </dependency>
            <dependency>
              <groupId>net.sourceforge.pmd</groupId>
              <artifactId>pmd-java</artifactId>
              <version>${pmd.version}</version>
            </dependency>
            <dependency>
              <groupId>net.sourceforge.pmd</groupId>
              <artifactId>pmd-javascript</artifactId>
              <version>${pmd.version}</version>
            </dependency>
            <dependency>
              <groupId>net.sourceforge.pmd</groupId>
              <artifactId>pmd-jsp</artifactId>
              <version>${pmd.version}</version>
            </dependency>
          </dependencies>
        </plugin>
        <plugin>
          <groupId>com.github.spotbugs</groupId>
          <artifactId>spotbugs-maven-plugin</artifactId>
          <version>3.1.3</version>
          <dependencies>
            <dependency>
              <groupId>com.github.spotbugs</groupId>
              <artifactId>spotbugs</artifactId>
              <!-- Explicitly use version 3.1.3 of spotbugs because the 3.1.3 plugin uses spotbugs 3.1.2 which doesn't
                   support Java 10 (https://github.com/spotbugs/spotbugs/issues/593) -->
              <version>3.1.3</version>
              <exclusions>
                <exclusion>
                  <groupId>xml-apis</groupId>
                  <artifactId>xml-apis</artifactId>
                </exclusion>
              </exclusions>
            </dependency>
          </dependencies>
        </plugin>
      </plugins>
    </pluginManagement>
  </build>
  <reporting>
    <plugins>
      <plugin>
        <groupId>com.github.spotbugs</groupId>
        <artifactId>spotbugs-maven-plugin</artifactId>
        <configuration>
          <xmlOutput>true</xmlOutput>
          <!-- Optional directory to put spotbugs xdoc xml report -->
          <xmlOutputDirectory>target/site</xmlOutputDirectory>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-pmd-plugin</artifactId>
        <version>3.9.0</version>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-jxr-plugin</artifactId>
        <version>2.5</version>
        <configuration>
          <linkJavadoc>true</linkJavadoc>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.codehaus.mojo</groupId>
        <artifactId>versions-maven-plugin</artifactId>
        <version>2.5</version>
        <reportSets>
          <reportSet>
            <reports>
              <report>dependency-updates-report</report>
              <report>plugin-updates-report</report>
              <report>property-updates-report</report>
            </reports>
          </reportSet>
        </reportSets>
      </plugin>
      <!--
      <plugin>
        <groupId>org.codehaus.mojo</groupId>
        <artifactId>taglist-maven-plugin</artifactId>
      </plugin>
      <plugin>
        <artifactId>maven-checkstyle-plugin</artifactId>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-report-plugin</artifactId>
      </plugin>
      <plugin>
        <groupId>org.codehaus.mojo</groupId>
        <artifactId>jdepend-maven-plugin</artifactId>
        <version>2.0</version>
      </plugin>
      -->
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-javadoc-plugin</artifactId>
        <version>3.0.1</version>
        <configuration>
          <aggregate>true</aggregate>
          <linksource>true</linksource>
          <overview>overview.html</overview>
          <links>
            <link>http://download.oracle.com/javase/8/docs/api</link>
            <link>http://download.oracle.com/javaee/7/api</link>
            <link>http://junit.org/junit4/javadoc/latest</link>
            <link>http://docs.oracle.com/javase/8/docs/jdk/api/javadoc/doclet</link>
            <link>http://www.jajakarta.org/ant/ant-1.6.1/docs/en/manual/api</link>
            <link>http://www.gwtproject.org/javadoc/latest</link>
            <link>http://web.cecs.pdx.edu/~whitlock/docs</link>
          </links>
          <detectJavaApiLink/>
          <detectLinks/>
        </configuration>
        <reportSets>
          <reportSet>
            <reports>
              <report>javadoc</report>
              <report>test-javadoc</report>
            </reports>
          </reportSet>
        </reportSets>
      </plugin>
      <!--
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-project-info-reports-plugin</artifactId>
        <reportSets>
          <reportSet>
            <reports>
              <report>summary</report>
              <report>dependencies</report>
              <report>project-team</report>
              <report>license</report>
              <report>issue-tracking</report>
              <report>scm</report>
            </reports>
          </reportSet>
        </reportSets>
      </plugin>
      <plugin>
        <!- - The dashboard report should be last - ->
        <groupId>org.codehaus.mojo</groupId>
        <artifactId>dashboard-maven-plugin</artifactId>
      </plugin>
    -->
      <plugin>
        <groupId>org.jacoco</groupId>
        <artifactId>jacoco-maven-plugin</artifactId>
        <reportSets>
          <reportSet>
            <reports>
              <!-- select non-aggregate reports -->
              <report>report</report>
            </reports>
          </reportSet>
        </reportSets>
      </plugin>
    </plugins>
  </reporting>
  <distributionManagement>
    <repository>
      <id>bintray-davidwhitlock-maven</id>
      <name>DavidWhitlock-maven</name>
      <url>https://api.bintray.com/maven/davidwhitlock/maven/PortlandStateJava/;publish=1;override=1</url>
    </repository>
    <site>
      <id>whitlock-PSU</id>
      <name>David Whitlock's PSU Web Site</name>
      <url>scpexe://cs.pdx.edu/u/whitlock/public_html/site</url>
    </site>
  </distributionManagement>
</project>
